# django-logto

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
django_logto/: apps.py  django_logto_client.py  logto_backend.py  logto_init.py  models.py  urls.py  views.py
django_logto/migrations/: 0001_initial.py
src/django_logto/: authentication.py  logto_backend.py  logto_init.py  models.py  urls.py  utils.py  views.py
src/django_logto/migrations/: 0001_initial.py
