[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-logto"
version = "0.0.1"
authors = [
  { name="Pulsation Studio", email="liam@pulsation.eco" },
]
description = "DRF and Django Logto integration"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pulsation-studio/django-logto"
Issues = "https://github.com/pulsation-studio/django-logto/issues"